# JIS

./: .env.example  LICENSE  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile  Dockerfile.dev  docker-compose.override.yml  docker-compose.yml
src/jis/: __init__.py  config.py  database.py  main.py
src/jis/api/: __init__.py  app.py  dependencies.py  exceptions.py
src/jis/api/endpoints/: auth.py
src/jis/api/routers/: vacancies.py
src/jis/api/routes/: __init__.py  maintenance.py
src/jis/api/routes/v1/: __init__.py  account.py
src/jis/core/: __init__.py  celery.py  config.py  database.py  logger.py  redis.py  static.py
src/jis/core/models/: vacancy.py
src/jis/core/parsers/: hh.py
src/jis/crud/: user.py
src/jis/models/: user.py  vacancy.py
src/jis/schemas/: user.py
src/jis/utils/: security.py
src/jis/web/: __init__.py  routes.py
src/jis/web/routes/: __init__.py
src/jis/web/routes/v1/: __init__.py  account.py  analytics.py  dashboard.py  responses.py  system.py  vacancies.py
src/jis/web/static/css/: loader.css
src/jis/web/static/css/auth/: _login.css  auth.css
src/jis/web/static/css/components/: _footer.css  _page.css  _sidebar.css  components.css  sidebar.css
src/jis/web/static/css/core/: _layout.css  _reset.css  _vars.css  core.css
src/jis/web/static/js/: main.js
src/jis/web/templates/: base.html
src/jis/web/templates/auth/: login.html  logout.html  register.html
src/jis/web/templates/components/: footer.html  sidebar.html
src/jis/web/templates/dashboard/: dashboard.html
(+2 files in other folders)
